# qec

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/qec/: __main__.py
src/qec/analysis/: plots.py
src/qec/cli/: main.py
src/qec/codes/: repetition.py
src/qec/decoding/: majority_vote.py
src/qec/noise/: channels.py
src/qec/simulation/: metrics.py  runner.py  spec.py
src/qec/utils/: seeding.py
